--- a/src/manifest.json
+++ b/src/manifest.json
@@ -4,7 +4,11 @@
   "name": "URL Scheme of Facebook",
   "description": "Give you Facebook protocol based urls.",
   "version": "1.0",
-
+  "icons": {
+    "16": "icon16.png",
+    "48": "icon48.png",
+    "128": "icon128.png"
+  },
   "browser_action": {
     "default_icon": "icon.png",
     "default_popup": "popup.html"
